Pequenas atualizações realizadas no design

--- a/src/app/upload/result/result.component.html
+++ b/src/app/upload/result/result.component.html
@@ -10,9 +10,11 @@
 <main class="main">
   <section>
     <h2>Data Analysis</h2>
-    <p>Análise textual. O que deve ser colocado exatamente?</p>
+    <p>Análise de inadimplência</p>
   </section>
+
   <section class="box">
     <p>Gráfico com a regressão linear</p>
+    <canvas id="grafico"></canvas>
   </section>
 </main>
