--- a/src/app/upload/result/result.component.css
+++ b/src/app/upload/result/result.component.css
@@ -32,6 +32,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  text-align: center;
 }
 
 .box {
@@ -39,5 +40,11 @@ body {
   border-radius: 0.5rem;
   padding: 2rem;
   box-shadow: 8px 8px 0 0 black;
-  max-width: 400px;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+canvas {
+  width: 100%;
+  height: 400px;
 }
